new french translations

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -315,13 +315,13 @@ Denounce ([numberOfTurns] turns) = Dénoncer ([numberOfTurns] tours)
 We will remember this. = Nous nous en souviendrons.
 
  # Requires translation!
-[civName] has declared war on [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] a déclaré à la civilisation [targetCivName] !
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] et [targetCivName] ont signé un traité de Paix !
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] et [targetCivName] ont signé une déclaration d'amitié !
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! = [civName] a accusé la civilisation [targetCivName] !
 
 Unforgivable = Impardonnable
 Enemy = Ennemi
@@ -344,9 +344,9 @@ You have declared friendship with our enemies! = Vous avez signé une Déclarati
 You have declared friendship with our allies = Vous avez signé une Déclaration d'Amitié avec nos alliés
 Our open borders have brought us closer together. = Notre Accord de libre passage nous a rapprochés
 Your so-called 'friendship' is worth nothing. = Votre soi-disant 'amitié' ne vaut rien.
-You have publicly denounced us! = Vous nous avez dénoncé publiquement!
-You have denounced our allies = Vous avez dénoncé nos alliées
-You have denounced our enemies = Vous avez dénoncé nos ennemies
+You have publicly denounced us! = Vous nous avez accusé publiquement!
+You have denounced our allies = Vous avez accusé nos alliées
+You have denounced our enemies = Vous avez accusé nos ennemies
 You betrayed your promise to not settle cities near us = Vous avez trahis votre promesse de ne pas fonder de ville proche de nous
 You fulfilled your promise to stop settling cities near us! = Vous avez tenu votre promesse de ne pas fonder de ville proche de nous!
 You refused to stop settling cities near us = Vous avez refusez de ne pas fonder de villes proches de nous
@@ -836,7 +836,7 @@ Hurry Wonder = Accélérer la construction
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Vos citoyens sont satisfaits de votre gouvernance depuis si longtemps que votre empire débute un Age d'Or !
 You have entered the [newEra]! = Vous êtes entré dans l'ère [newEra]!
  # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = [civName] entre en [eraName] !
 [policyBranch] policy branch unlocked! = Doctrine [policyBranch] déverrouillée!
 Overview = Vue d'ensemble
 Total = Total
@@ -866,7 +866,7 @@ Defeated = Vaincu
 Tiles = Cases
 Natural Wonders = Merveilles de la Nature
  # Requires translation!
-Treasury deficit = 
+Treasury deficit = Finances déficitaires
 
 #Victory
 
@@ -951,7 +951,7 @@ Clear improvements = Effacer les améliorations
 Clear resource = Effacer les ressources
 Requires = Requiert
  # Requires translation!
-Menu = 
+Menu = Menu
 
 # Civilopedia Tutorials names
 
