--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -486,7 +486,7 @@ Food and Culture from Friendly City-States are increased by 50% = Дружест
 
 Songhai = Сонгай
 Askia = Аския
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Лагеря варваров и грабёж городов приносят в 3 раза больше Золота. Погруженные на борт юниты могут давать защищаться.
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Лагеря варваров и грабёж городов приносят в 3 раза больше Золота. Погруженные на борт юниты могут защищаться.
 
 Spain = Испания
 Isabella = Изабелла
@@ -585,7 +585,7 @@ Load [saveFileName] = Загрузить [saveFileName]
 Delete save = Удалить сохранение
 Saved at = Сохранено в
 Load map = Загрузить карту
-Are you sure you want to delete this map? = Вы уверены в удалении этой карты?
+Are you sure you want to delete this map? = Вы уверены что хотите удалить эту карту?
 Upload map = Отправить
 Could not upload map! = Невозможно отправить карту!
 Map uploaded successfully! = Карта успешно загружена!
@@ -831,7 +831,6 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Ускорить постройку чуда
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!
 You have entered the [newEra]! = Вы вошли в эпоху [newEra]!
- # Requires translation!
 [civName] has entered the [eraName]! = [civName] вошла в эпоху [eraName]!
 [policyBranch] policy branch unlocked! = Ветвь общественных институтов [policyBranch] разблокирована!
 Overview = Обзор
@@ -861,7 +860,6 @@ Action = Действие
 Defeated = Побеждён
 Tiles = Клетки
 Natural Wonders = Чудеса природы
- # Requires translation!
 Treasury deficit = Дефицит сокровищ
 
 #Victory
@@ -870,7 +868,7 @@ Science victory = Научная победа
 Cultural victory = Культурная победа
 Conquest victory = Завоевание
 Complete all the spaceship parts\n to win! = Постройте все части космического корабля\n чтобы победить!
-Complete 5 policy branches\n to win! = Завершите 4 ветви общественных институтов\n чтобы победить!
+Complete 5 policy branches\n to win! = Завершите 5 ветвей общественных институтов\n чтобы победить!
 Destroy all enemies\n to win! = Уничтожьте всех врагов\n чтобы победить!
 You have won a scientific victory! = Вы одержали научную победу!
 You have won a cultural victory! = Вы одержали культурную победу!
@@ -1362,7 +1360,7 @@ Remove Railroad = Убрать железную дорогу
 Remove Forest = Вырубить лес
 Remove Jungle = Вырубить джунгли
 Remove Marsh = Осушить болото
-Remove Fallout = Засеять пустошь
+Remove Fallout = Убрать пустошь
 Ancient ruins = Древние руины
 City ruins = Руины города
 Academy = Академия
