--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -1,20 +1,20 @@
 
 # Tutorial tasks
 
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Przemieść jednostkę!\nWybierz jednostkę > Wskaż miejsce docelowe > Wykonaj polecenie wciskając strzałkę
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Załóż miasto!\nWybierz Osadnika (ikona flagi) > Wybierz akcję 'Załóż miasto' (lewy dolny róg)
-Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta!\nKliknij dwukrotnie na Miasto
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\nWciśnij przycisk Wybierz Technologię (zielonawy, na górze po lewej) > \n Wybierz technologię > wciśnij 'Opracuj'
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wybierz budowlę!\nPrzejdź do panelu miasta > Wybierz jednostkę lub budowlę (lewa strona)
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę!\nPrzejdź przez wszystkie jednostki wciskając przycisk 'Następna jednostka' > Wciśnij 'Następna tura'
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić obywateli
-Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację!\nEksploruj świat do momentu napotkania nowej cywilizacji!
-Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk 'Menu' (lewy górny róg) > Wciśnij przycisk 'Opcje'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!\nStwórz Robotnika > n\Przemieść go na Równiny lub Łąkę >n\Kliknij 'Zbuduj ulepszenie' (na dole po lewej stronie, nad tabelą jednostek) > n\Wybierz Farmę > Zostaw tam pracownika, dopóki nie skończy
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami,\nlub Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną!n\nWybierz jednostke powietrzną > wybierz inne miasto w zasięgu > \nPrzemieść jednostkę do innego miasta
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobacz rozkład statystyk!\nWejdź w 'Przegląd' (górny prawy róg) >\nKliknij na 'Statystyki'
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Przemieść jednostkę! \n>Wybierz jednostkę \n>Wskaż miejsce docelowe \n>Wykonaj polecenie wciskając strzałkę
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Załóż miasto! \n>Wybierz Osadnika (ikona flagi) \n>Wybierz akcję 'Załóż miasto' (lewy dolny róg)
+Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta! \n>Kliknij dwukrotnie na Miasto
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\n>Wciśnij przycisk Wybierz Technologię (zielonawy, na górze po lewej) \n>Wybierz technologię a następnie wciśnij 'Opracuj'
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wybierz budowlę! \n>Przejdź do panelu miasta \n>Wybierz jednostkę lub budowlę (lewa strona)
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę! \n>Przejdź przez jednostki klikając 'Następna jednostka' \n>Wciśnij 'Następna tura'
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\n>Przejdź do panelu Miasta \n>Wskaż przypisane (zielone) pole by odznaczyć \n>Wskaż pole by przydzielić obywateli
+Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację! \n>Eksploruj świat do momentu napotkania nowej cywilizacji!
+Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji! \n>Wciśnij przycisk 'Menu' (lewy górny róg) \n>Wciśnij przycisk 'Ustawienia'
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie! \n>Stwórz Robotnika po czym przemieść go na Równine/Łąke \n>Kliknij 'Zbuduj ulepszenie' (na dole po lewej stronie, nad tabelą jednostek) > \n>Wybierz Farmę  Zostaw tam pracownika, dopóki nie skończy
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy! \n>Wybuduj drogi pomiędzy stolicą a innymi drogami, \nlub Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Podbij miasto! \n>Doprowadź wrogie miasto do stanu niskiego zdrowia \n>Wejdź do miasta jednostką blisko dystansową
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną! \n>Wybierz jednostke powietrzną \n>Wybierz inne miasto w zasięgu > \n>Przemieść jednostkę do innego miasta
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobacz rozkład statystyk! \n>Wejdź w 'Przegląd' (górny prawy róg) \n>Kliknij na 'Statystyki'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij mi proszę (yairm210@hotmail.com) maila z informacją o grze (menu -> zapisz grę -> skopiuj informacje o grze -> wklej do maila) a ja postaram się to naprawić. Dziękuję za pomoc.
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij nam raport a my postramy się go naprawić tak szybko, jak to możliwe!
@@ -314,14 +314,11 @@ Indeed! = Wspaniale!
 Denounce ([numberOfTurns] turns) = Potęp cywilizację na [numberOfTurns] tur
 We will remember this. = Zapamiętamy to sobie!
 
- # Requires translation!
-[civName] has declared war on [targetCivName]! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+
+[civName] has declared war on [targetCivName]! = [civName] zadeklarowało wojnę [targetCivName]
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] i [targetCivName] podpisały Traktat Pokojowy
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] i [targetCivName] podpisały Deklarację Przyjaźni
+[civName] has denounced [targetCivName]! = [civName] potępiło cywilizację [targetCivName]
 
 Unforgivable = Niewybaczlne
 Enemy = Wróg 
@@ -798,8 +795,8 @@ The city will not produce anything. = Miasto niczego nie produkuje
 
 # Technology UI
 
-Pick a tech = Wybierz /ntechnologię
-Pick a free tech = Wybierz darmową technologię
+Pick a tech = Wybierz \ntechnologię
+Pick a free tech = Wybierz darmową \ntechnologię
 Research [technology] = Opracuj [technology]
 Pick [technology] as free tech = Wybierz [technology] jako darmową technologię
 Units enabled = Udostępnia jednostki
@@ -835,8 +832,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Przyspiesz Budowanie Cudu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele są zadowoleni pod twoim panowaniem tak długo że imperium wkracza w Złotą Era
 You have entered the [newEra]! = Wkroczyłeś do [newEra]!
- # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = Cywilizacja [civName] wkroczyła do [eraName]
 [policyBranch] policy branch unlocked! = Odblokowano gałąź ustroju społecznego [policyBranch] 
 Overview = Przegląd
 Total = Łącznie
