--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -314,13 +314,9 @@ Indeed! = Parfait!
 Denounce ([numberOfTurns] turns) = Dénoncer ([numberOfTurns] tours)
 We will remember this. = Nous nous en souviendrons.
 
- # Requires translation!
 [civName] has declared war on [targetCivName]! = [civName] a déclaré à la civilisation [targetCivName] !
- # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] et [targetCivName] ont signé un traité de Paix !
- # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] et [targetCivName] ont signé une déclaration d'amitié !
- # Requires translation!
 [civName] has denounced [targetCivName]! = [civName] a accusé la civilisation [targetCivName] !
 
 Unforgivable = Impardonnable
@@ -835,7 +831,6 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Accélérer la construction
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Vos citoyens sont satisfaits de votre gouvernance depuis si longtemps que votre empire débute un Age d'Or !
 You have entered the [newEra]! = Vous êtes entré dans l'ère [newEra]!
- # Requires translation!
 [civName] has entered the [eraName]! = [civName] entre en [eraName] !
 [policyBranch] policy branch unlocked! = Doctrine [policyBranch] déverrouillée!
 Overview = Vue d'ensemble
@@ -865,7 +860,6 @@ Action = Action
 Defeated = Vaincu
 Tiles = Cases
 Natural Wonders = Merveilles de la Nature
- # Requires translation!
 Treasury deficit = Finances déficitaires
 
 #Victory
@@ -950,8 +944,9 @@ Clear terrain features = Effacer les caractéristiques des terrains
 Clear improvements = Effacer les améliorations
 Clear resource = Effacer les ressources
 Requires = Requiert
- # Requires translation!
 Menu = Menu
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
