--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -968,6 +968,8 @@ Clear resource = Lösche Ressource
 Requires = Benötigt
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
