--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -215,7 +215,6 @@ Factory = Pabrik
 Stock Exchange = Pasar Saham
 
 Big Ben = Big Ben
- # Requires translation!
 'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 'Untuk menggapai hal hebat, diperlukan dua hal: rencana, dan waktu yang tidak terlalu cukup' - Leonard Bernstein
 -15% to purchasing items in cities = Harga barang di kota -15% 
 
@@ -1017,6 +1016,8 @@ Clear resource =
 Requires = 
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
