--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -314,7 +314,6 @@ Indeed! = Wspaniale!
 Denounce ([numberOfTurns] turns) = Potęp cywilizację na [numberOfTurns] tur
 We will remember this. = Zapamiętamy to sobie!
 
-
 [civName] has declared war on [targetCivName]! = [civName] zadeklarowało wojnę [targetCivName]
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] i [targetCivName] podpisały Traktat Pokojowy
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] i [targetCivName] podpisały Deklarację Przyjaźni
@@ -946,6 +945,8 @@ Clear improvements = Wyczyść ulepszenia
 Clear resource = Wyczyść zasoby
 Requires = Wymagane
 Menu = Menu
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
