--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1064,6 +1064,8 @@ Clear resource =
 Requires = Requer
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
