--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1413,6 +1413,8 @@ Clear resource =
 Requires = necesită
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
