--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -945,6 +945,8 @@ Clear improvements = Удалить улучшения
 Clear resource = Удалить ресурсы
 Requires = Требует
 Menu = Меню
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
