--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -945,6 +945,8 @@ Clear improvements = Видалити вдосконалення
 Clear resource = Видалити ресурс
 Requires = Потребує
 Menu = Меню
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
