--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -965,6 +965,8 @@ Clear resource = Smazat zdroje
 Requires = Požadavky
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
