--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -989,6 +989,8 @@ Clear resource = 자원 지우기
 Requires = 선행 조건
  # Requires translation!
 Menu = 
+ # Requires translation!
+Brush Size = 
 
 # Civilopedia Tutorials names
 
