--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -6,7 +6,7 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
  # Requires translation!
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Sticht een stad!\nSelecteer de kolonist (vlaggeneenheid) > Klik op 'Stad Stichten' (linksonder)
  # Requires translation!
-Enter the city screen!\nClick the city button twice = found a cityfound a cityfound a cityfound a city
+Enter the city screen!\nClick the city button twice = 
  # Requires translation!
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
  # Requires translation!
