Finish Dutch translations for 'Tutorial tasks'

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -6,29 +6,29 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
  # Requires translation!
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Sticht een stad!\nSelecteer de kolonist (vlaggeneenheid) > Klik op 'Stad Stichten' (linksonder)
  # Requires translation!
-Enter the city screen!\nClick the city button twice = 
+Enter the city screen!\nClick the city button twice = Open het Stadscherm!\nKlik tweemaal op de stadsknop
  # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Kies een technologie om te onderzoeken!\nKlik op de technologie knop (groenachtig, linksboven) > \n selecteer technologie > klik op 'Onderzoek' (rechtsonder)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Kies een constructie!\nOpen het stadsscherm > Klik op een eenheid of gebouw (linkerkant)
  # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beëindig je beurt!\nGa door de eenheden heen met 'Volgende eenheid' > Klik op 'Volgende beurt'
  # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Wijs bewerkte tegels opnieuw toe!\nOpen het stadsscherm > klik op de toegewezen (groene) tegel om de toewijzing ongedaan te maken > \n klik op een niet-toegewezen tegel om populatie toe te wijzen
  # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = Ontmoet een andere beschaving!\nOntdek de kaart totdat je een andere beschaving tegenkomt!
  # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Open de optiemenu!\nKlik op de menuknop (linksboven) > klik op 'Opties'
  # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Bouw een verbetering!\nProduceer een werker eenheid > Verplaats naar een vlakte- of graslandtegel > \n Klik op 'Creër verbetering' (boven de eenheidstabel, linksonder)\n > Kies de boerderij > \n Laat de werker daar totdat deze klaar is
  # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Maak een handelsroute!\nConstrueer wegen tussen je hoofdstad en een andere stad\nOf, automatiseer je werker en laat hem daar uiteindelijk aan toe komen
  # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Verover een stad!\nBreng een vijandelijke stad tot lage gezondheid > \nGa de stad binnen met een melee-eenheid
  # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Verplaats een luchteenheid!\nSelecteer een luchteenheid > selecteer een andere stad binnen bereik > \nVerplaats de eenheid naar de andere stad
  # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Bekijk je statistiekenoverzicht! \nOpen het overzichtsscherm (rechterbovenhoek) > \nKlik op 'Statistieken'
 
  # Requires translation!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = 
