--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -2,33 +2,33 @@
 # Tutorial tasks
 
  # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Een eenheid verplaatsen!\nKlik op een eenheid > Klik op een bestemming > Klik op de pijl popup
  # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Sticht een stad!\nSelecteer de kolonist (vlaggeneenheid) > Klik op 'Stad Stichten' (linksonder)
  # Requires translation!
-Enter the city screen!\nClick the city button twice = 
+Enter the city screen!\nClick the city button twice = Open het Stadscherm!\nKlik tweemaal op de stadsknop
  # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Kies een technologie om te onderzoeken!\nKlik op de technologie knop (groenachtig, linksboven) > \n selecteer technologie > klik op 'Onderzoek' (rechtsonder)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Kies een constructie!\nOpen het stadsscherm > Klik op een eenheid of gebouw (linkerkant)
  # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beëindig je beurt!\nGa door de eenheden heen met 'Volgende eenheid' > Klik op 'Volgende beurt'
  # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Wijs bewerkte tegels opnieuw toe!\nOpen het stadsscherm > klik op de toegewezen (groene) tegel om de toewijzing ongedaan te maken > \n klik op een niet-toegewezen tegel om populatie toe te wijzen
  # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = Ontmoet een andere beschaving!\nOntdek de kaart totdat je een andere beschaving tegenkomt!
  # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Open de optiemenu!\nKlik op de menuknop (linksboven) > klik op 'Opties'
  # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Bouw een verbetering!\nProduceer een werker eenheid > Verplaats naar een vlakte- of graslandtegel > \n Klik op 'Creër verbetering' (boven de eenheidstabel, linksonder)\n > Kies de boerderij > \n Laat de werker daar totdat deze klaar is
  # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Maak een handelsroute!\nConstrueer wegen tussen je hoofdstad en een andere stad\nOf, automatiseer je werker en laat hem daar uiteindelijk aan toe komen
  # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Verover een stad!\nBreng een vijandelijke stad tot lage gezondheid > \nGa de stad binnen met een melee-eenheid
  # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Verplaats een luchteenheid!\nSelecteer een luchteenheid > selecteer een andere stad binnen bereik > \nVerplaats de eenheid naar de andere stad
  # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Bekijk je statistiekenoverzicht! \nOpen het overzichtsscherm (rechterbovenhoek) > \nKlik op 'Statistieken'
 
  # Requires translation!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = 
@@ -40,18 +40,18 @@ Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not s
 ## Ancient era buildings
 
  # Requires translation!
-Palace = 
+Palace = Paleis
  # Requires translation!
 Indicates the capital city = 
 
  # Requires translation!
-Monument = 
+Monument = Monument
  # Requires translation!
 Granary = 
  # Requires translation!
 Stone Works = 
  # Requires translation!
-Must not be on plains = 
+Must not be on plains = Mag niet op een vlakte
 
  # Requires translation!
 Stonehenge = 
@@ -59,27 +59,27 @@ Stonehenge =
 'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
 
  # Requires translation!
-Library = 
+Library = Bibliotheek
 +1 Science Per 2 Population = +1 Wetenschap per 2 Populatie
  # Requires translation!
-Paper Maker = 
+Paper Maker = Papier Maker
 
  # Requires translation!
 The Great Library = 
  # Requires translation!
-Free Technology = 
+Free Technology = Gratis Technologie
  # Requires translation!
 'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
 
  # Requires translation!
 Circus = 
  # Requires translation!
-Walls = 
+Walls = Muren
  # Requires translation!
-Walls of Babylon = 
+Walls of Babylon = Muren van Babylon
 
  # Requires translation!
-The Pyramids = 
+The Pyramids = De piramides
  # Requires translation!
 'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
 Worker construction increased 25% = Werkerproducktie met 25% vehoogt
@@ -97,26 +97,26 @@ Colossus =
  # Requires translation!
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
  # Requires translation!
-+1 gold from worked water tiles in city = 
++1 gold from worked water tiles in city = +1 goud van bewerkte water tegels in een stad
 
  # Requires translation!
-Temple = 
+Temple = Tempel
  # Requires translation!
-Burial Tomb = 
+Burial Tomb = Graftombe
 
  # Requires translation!
-The Oracle = 
+The Oracle = Het Orakel
  # Requires translation!
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
 Free Social Policy = Gratis sociaalbeleid
 
 
  # Requires translation!
-Lighthouse = 
+Lighthouse = Vuurtoren
  # Requires translation!
-Can only be built in coastal cities = 
+Can only be built in coastal cities = Kan alleen gebouwd worden in kuststeden
  # Requires translation!
-+1 food from Ocean and Coast tiles = 
++1 food from Ocean and Coast tiles = +1 voedsel van Oceaan en Kust tegels
 
  # Requires translation!
 The Great Lighthouse = 
@@ -135,7 +135,7 @@ Chichen Itza =
 Golden Age length increases +50% = Gouden eeuw lengte neem toe met +50%
 
  # Requires translation!
-Courthouse = 
+Courthouse = Gerechtsgebouw
  # Requires translation!
 Remove extra unhappiness from annexed cities = 
  # Requires translation!
@@ -483,21 +483,21 @@ Requires [resource] =
 Required tech: [requiredTech] = 
 
  # Requires translation!
-Diplomacy = 
+Diplomacy = Diplomatiek
  # Requires translation!
-War = 
+War = Oorlog
  # Requires translation!
-Peace = 
+Peace = Vrede
  # Requires translation!
-Declare war = 
+Declare war = Verklaar oorlog
  # Requires translation!
-Declare war on [civName]? = 
+Declare war on [civName]? = Verklaar oorlog met [civName]
  # Requires translation!
-[civName] has declared war on us! = 
+[civName] has declared war on us! = [civName] heeft ons de oorlog verklaard!
  # Requires translation!
 [leaderName] of [nation] = 
  # Requires translation!
-You'll pay for this! = 
+You'll pay for this! = Je zult hier voor betalen!
  # Requires translation!
 Negotiate Peace = 
  # Requires translation!
@@ -505,17 +505,17 @@ Very well. =
  # Requires translation!
 Farewell. = 
  # Requires translation!
-Sounds good! = 
+Sounds good! = Klinkt goed!
  # Requires translation!
-Not this time. = 
+Not this time. = Niet deze keer.
  # Requires translation!
-Excellent! = 
+Excellent! = Uitstekend!
  # Requires translation!
 How about something else... = 
  # Requires translation!
 A pleasure to meet you. = 
  # Requires translation!
-Our relationship:  = 
+Our relationship:  = Onze relatie: 
  # Requires translation!
 We have encountered the City-State of [name]! = 
  # Requires translation!
@@ -527,7 +527,7 @@ Indeed! =
  # Requires translation!
 Denounce ([numberOfTurns] turns) = 
  # Requires translation!
-We will remember this. = 
+We will remember this. = We zullen dit onthouden.
 
  # Requires translation!
 [civName] has declared war on [targetCivName]! = 
@@ -541,17 +541,17 @@ We will remember this. =
  # Requires translation!
 Unforgivable = 
  # Requires translation!
-Enemy = 
+Enemy = Vijand
  # Requires translation!
-Competitor = 
+Competitor = Concurrent
  # Requires translation!
-Neutral = 
+Neutral = Neutraal
  # Requires translation!
-Favorable = 
+Favorable = Gunstig
  # Requires translation!
-Friend = 
+Friend = Vriend
  # Requires translation!
-Ally = 
+Ally = Bondgenoot
 
 ## Diplomatic modifiers
 
@@ -2712,9 +2712,9 @@ Reduces damage taken from interception by 50% =
  # Requires translation!
 Bonus when intercepting [amount]% = 
  # Requires translation!
-Ambush I = 
+Ambush I = Hinderlaag I
  # Requires translation!
-Ambush II = 
+Ambush II = Hinderlaag II
  # Requires translation!
 Haka War Dance = 
  # Requires translation!
