--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -946,7 +946,7 @@ Clear resource = Видалити ресурс
 Requires = Потребує
 Menu = Меню
  # Requires translation!
-Brush Size = 
+Brush Size = Розмір пензля
 
 # Civilopedia Tutorials names
 
