--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -946,7 +946,7 @@ Clear resource = Удалить ресурсы
 Requires = Требует
 Menu = Меню
  # Requires translation!
-Brush Size = 
+Brush Size = Размер кисти
 
 # Civilopedia Tutorials names
 
