--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 358
-        versionName "3.4.8"
+        versionCode 359
+        versionName "3.4.8-patch1"
 
         archivesBaseName = "Unciv"
     }
