one french translation

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -946,7 +946,7 @@ Clear resource = Effacer les ressources
 Requires = Requiert
 Menu = Menu
  # Requires translation!
-Brush Size = 
+Brush Size = Taille de Brosse
 
 # Civilopedia Tutorials names
 
